# pairs_sum

./: Readme.md  main.py  pyproject.toml  test_main.py
.github/workflows/: pr.yml
