[project]
name = "unique_sum_pairs"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
