[project]
name = "unique_sum_pairs"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "COM" # flake8-commas
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
